--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,7 +100,7 @@
     <activity
         android:name="com.pedro.streamer.openglexample.OpenGlRtmpActivity"
         android:label="@string/opengl_rtmp"
-        android:screenOrientation="portrait"
+        android:screenOrientation="landscape"
         />
     <activity
         android:name="com.pedro.streamer.openglexample.OpenGlRtspActivity"
